Opprydning i unleash-tester
Fulgte stort sett rådene fra IntelliJ